@@ -1,0 +1,36 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Add dish</title>
+    </head>
+    <body>
+        <form action="/add-dish" method="post">
+            <table cellspacing="20px">
+                <tr>
+                    <td>Name:</td>
+                    <td><input type="text" name="newName" placeholder="Name of Dish"></td>
+                </tr>
+                <tr>
+                    <td>Description:</td>
+                    <td><textarea name="newDescription" cols="30" rows="10" placeholder="About dish"></textarea></td>
+                </tr>
+                <tr>
+                    <td>Price:</td>
+                    <td><input type="text" name="newPrice" placeholder="Price"></td>
+                </tr>
+                <tr>
+                    <td>Image ID:</td>
+                    <td><input type="text" name="newID" placeholder="Google Drive image ID only"></td>
+                </tr>
+                <tr>
+                    <td>Password:</td>
+                    <td><input type="password" name="key"></td>
+                </tr>
+                <tr>
+                    <td><button type="submit">Add dish</button></td>
+                </tr>
+            </table>
+        </form>
+    </body>
+</html>
