@@ -8,6 +8,6 @@
     <body>
         <h1>Welcome <%= NAME %></h1>
         <h3>Blue Fox Restaurant</h3>
-        <img src="https://mega.nz/file/BJwSzT6Q#0ATzlkcLvhW00YeY3e2MvEjFOOByrF2ea4lVPNnG2bU" alt="apple-pie">
+        <img src="https://drive.google.com/uc?id=1CmBfVVKNUTN4s1jHuSGlOGl_uQ1aKpp-" alt="">
     </body>
 </html>
